tests/ui/typeck/function_calls/type_conversion_invalid.sol
//@ compile-flags: -Ztypeck

contract C {
    function f() public pure {
        int8(256); //~ ERROR: invalid explicit type conversion
        uint8(256); //~ ERROR: invalid explicit type conversion
    }
}
